修复了一些bug

--- a/pages/goods/details/index.wxml
+++ b/pages/goods/details/index.wxml
@@ -68,6 +68,7 @@
   <promotion-popup list="{{list}}" bind:closePromotionPopup="closePromotionPopup" show="{{isShowPromotionPop}}" bind:promotionChange="promotionChange" />
 </view>
 <t-toast id="t-toast" />
+<t-dialog id="t-dialog" />
 <view wx:if="{{loading}}">
   <loading-dialog show="{{loading}}" />
 </view>
